<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/settings"/>

    <TextView
            android:id="@+id/textView_settings_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/settings_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>

    <TextView
            android:id="@+id/textView_bounding_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_bounding_box"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_settings_description"/>

    <TextView
            android:id="@+id/textView_north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/editText_north"
            android:text="@string/settings_bounding_box_north"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_bounding_box"/>

    <EditText
            android:id="@+id/editText_north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_north"
            app:layout_constraintStart_toStartOf="@+id/editText_south"/>

    <TextView
            android:id="@+id/textView_east"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/editText_east"
            android:text="@string/settings_bounding_box_east"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_north"/>

    <EditText
            android:id="@+id/editText_east"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_east"
            app:layout_constraintStart_toEndOf="@+id/textView_south"/>

    <TextView
            android:id="@+id/textView_south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/editText_south"
            android:text="@string/settings_bounding_box_south"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_east"
            tools:text="South"/>

    <EditText
            android:id="@+id/editText_south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_south"
            app:layout_constraintStart_toStartOf="@+id/editText_east"/>

    <TextView
            android:id="@+id/textView_west"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/editText_west"
            android:text="@string/settings_bounding_box_west"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_south"/>

    <EditText
            android:id="@+id/editText_west"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_west"
            app:layout_constraintStart_toStartOf="@+id/editText_south"/>

    <TextView
            android:id="@+id/textView_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_west"/>

    <CheckBox
            android:id="@+id/checkBox_use_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:labelFor="@+id/editText_date"
            android:text="@string/settings_use_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_date"/>

    <EditText
            android:id="@+id/editText_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="@+id/checkBox_use_date"
            app:layout_constraintStart_toEndOf="@+id/checkBox_use_date"
            app:layout_constraintTop_toTopOf="@+id/checkBox_use_date"/>

    <TextView
            android:id="@+id/textView_min_magnitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_min_magnitude"
            android:textStyle="bold"
            android:labelFor="@+id/editText_min_mag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_date_explanation"/>

    <EditText
            android:id="@+id/editText_min_mag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_min_magnitude"
            app:layout_constraintStart_toEndOf="@+id/textView_min_magnitude"/>

    <TextView
            android:id="@+id/textView_max_rows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/settings_max_rows"
            android:labelFor="@+id/editText_max_rows"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_min_mag"/>

    <EditText
            android:id="@+id/editText_max_rows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView_max_rows"
            app:layout_constraintStart_toEndOf="@+id/textView_max_rows"/>

    <TextView
            android:id="@+id/textView_date_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/settings_date_explanation"
            android:visibility="gone"
            android:textColor="@color/grey"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/editText_date"
            app:layout_constraintStart_toStartOf="@+id/editText_date"
            app:layout_constraintTop_toBottomOf="@+id/editText_date"/>


</android.support.constraint.ConstraintLayout>